chore: Update GitHub Actions workflow for README automation
- Added a personal access token for authentication in the checkout step.
- Updated the user email for the Git commit to include the GitHub Actions bot ID.
- Separated the push command into a dedicated step using the github-push-action for better clarity and control.

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -14,6 +14,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PAT }}
       
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -30,8 +32,13 @@ jobs:
         
       - name: Commit changes
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add README.md
           git commit -m "docs: README 자동 업데이트" || exit 0
-          git push 
+          
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.PAT }}
+          branch: ${{ github.ref }} 
